package es.ucab.entrenos.modules.identidad.modelos;

public class Usuario {
}
