package es.ucab.entrenos.modules.publicacion.modelos;

public class Transaccion {
}
