package es.ucab.entrenos.modulos.subasta.modelos;

public class Puja {
}
