@startuml
skinparam style strictuml
skinparam monochrome true
skinparam shadowing false
skinparam defaultFontName "Arial"
skinparam classAttributeIconSize 0

hide circles
hide methods
hide attributes

title Modelo de Dominio - Plataforma Comunitaria EntreNós

class Usuario {
}

class Billetera {
}

class Habilidad {
}

class Publicacion {
}

class Transaccion {
}

class Reseña {
}

class Subasta {
}

class Activo {
}

class Puja {
}

' --- Relaciones y Multiplicidades ---

Usuario "1" -- "1" Billetera : posee >
(Usuario, Billetera) .. Transaccion : "vincula Proveedor y Demandante"

Usuario "1" -- "0..*" Habilidad : registra >
Habilidad "1" -- "0..*" Publicacion : tipifica >
Usuario "1" -- "0..*" Publicacion : publica >

Transaccion "1" -- "1" Publicacion : se origina de >
Transaccion "1" -- "1..2" Reseña : genera >

Usuario "1" -- "0..*" Subasta : organiza >
Subasta "1" -- "1..*" Activo : expone >
Subasta "1" -- "0..*" Puja : recibe >

Puja "0..*" -- "1" Usuario : realiza <

@endum